tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_header/tproxy/to_tproxy/_test_context/VirtualService.1717198869.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          x-custom: some-value
    route:
    - destination:
        host: tproxy
